Основная функциональность приложения

--- a/src/templates/main.html
+++ b/src/templates/main.html
@@ -8,7 +8,8 @@
 <h1>Выпускная квалификационная работа по курсу «Data Science»</h1>
 <h2>Прогнозирование конечных свойств новых материалов (композиционных материалов)</h2>
 
-<p>...</p>
+<p><a href="/model_1_2/">Прогнозирование модуля упругости при растяжении и прочности при растяжении</a></p>
+<p><a href="/model_3/">Прогнозирование соотношения матрица-наполнитель</a></p>
 
 </body>
 </html>
