Тестирование работы модели в приложении

--- a/src/templates/model_1_2.html
+++ b/src/templates/model_1_2.html
@@ -7,8 +7,6 @@
 <body>
     <h2>Прогнозирование модуля упругости при растяжении и прочности при растяжении</h2>
 
-	<h3>Введите входные переменные:</h3>
-
     {% if error %}
         <pre style="color:DarkRed">{{ error }}</pre>
     {% endif %}
@@ -64,16 +62,24 @@
     </form>
 
     {% if var8 or var9 %}
-		<h3>Результат:</h3>
+		<p>Входные переменные:</p>
+		{{ inputs|safe }}
 
-		<p>
-		    <span>Модуль упругости при растяжении, ГПа: </span>
-			<span>{{ var8 }}</span>
-		</p>
-		<p>
-	    	<span>Прочность при растяжении, МПа: </span>
-			<span>{{ var9 }}</span>
-		</p>
+		<p>Результат модели:</p>
+		<table border="1" class="dataframe">
+		  <thead>
+			<tr>
+			  <th>Модуль упругости при растяжении, ГПа</th>
+			  <th>Прочность при растяжении, МПа</th>
+			</tr>
+		  </thead>
+		  <tbody>
+			<tr>
+			  <td>{{ var8 }}</td>
+			  <td>{{ var9 }}</td>
+			</tr>
+		  </tbody>
+		</table>
 
     {% endif %}
 
